--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <groupId>javax.servlet.jsp</groupId>
     <artifactId>javax.servlet.jsp-api</artifactId>
     <version>2.3.3</version>
-    <scope>provided</scope>
+    <scope>compile</scope>
 </dependency>
     
     <dependency>
