--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
     <version>2.3.3</version>
     <scope>compile</scope>
 </dependency>
+    <dependency>
+    <groupId>org.apache.maven</groupId>
+    <artifactId>maven-plugin-api</artifactId>
+    <version>3.6.1</version>
+</dependency>
     
     <dependency>
     <groupId>javax.servlet</groupId>
