--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
     <version>3.0-alpha-1</version>
     <scope>provided</scope>
 </dependency>
+    
+    <dependency>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.0.0-M3</version>
+</dependency>
   </dependencies>
   <build>
     <plugins>
